--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "next": "next start",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "start:dev": "cross-env NODE_ENV=development node server.js"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
     "next": "^9.0.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "cross-env": "^5.2.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/FrontenderMagazineDevelopment/backoffice.article.frontender.info.git"
