--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "next": "next start",
     "start": "cross-env NODE_ENV=production node server.js",
     "start:dev": "cross-env NODE_ENV=development node server.js",
-    "test": "bundlesize"
+    "test": "bundlesize --debug"
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
