--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "next": "next start",
     "start": "cross-env NODE_ENV=production node server.js",
     "start:dev": "cross-env NODE_ENV=development node server.js",
-    "test": "bundlesize --debug"
+    "test": "bundlesize",
+    "pretest": "codechecks"
   },
   "dependencies": {
+    "@hapi/joi": "^15.1.1",
     "@zeit/next-sass": "^1.0.1",
+    "apollo-client": "^2.5.1",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "net": "^1.0.2",
     "next": "^9.0.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.2",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@codechecks/build-size-watcher": "^0.1.0",
+    "@codechecks/client": "^0.1.7",
     "bundlesize": "^0.18.0",
     "cross-env": "^5.2.0"
   },
