--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "next": "next start",
     "start": "cross-env NODE_ENV=production node server.js",
     "start:dev": "cross-env NODE_ENV=development node server.js",
-    "test": "bundlesize",
-    "pretest": "codechecks"
+    "test": "bundlesize"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
@@ -23,12 +22,9 @@
     "next": "^9.0.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.2",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "@codechecks/build-size-watcher": "^0.1.0",
-    "@codechecks/client": "^0.1.7",
     "bundlesize": "^0.18.0",
     "cross-env": "^5.2.0"
   },
